--- a/memory-game.css
+++ b/memory-game.css
@@ -22,7 +22,7 @@ body {
   width: 100px;
   height: 150px;
   position: relative;
-  transition: transform 0.5s;
+  transition: transform 0.5s ease;
   transform-style: preserve-3d;
   cursor: pointer;
 }
@@ -44,4 +44,10 @@ body {
 }
 .card.isFlipped {
   transform: rotateY(180deg);
+}
+.card:hover {
+  transform: scale(1.1);
+}
+.card.isFlipped:hover {
+  transform: rotateY(180deg) scale(1.1);
 }
