--- a/memory-game.css
+++ b/memory-game.css
@@ -5,13 +5,14 @@
 }
 body {
   display: flex;
-  align-items: center;
-  justify-content: center;
   height: 100vh;
 }
 #grid-container {
+  margin: 150px auto;
   display: grid;
-  gap: 10px;
+  grid-template-columns: repeat(7, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  gap: 25px;
 }
 .card-container {
   width: 100px;
@@ -28,10 +29,10 @@ body {
 }
 .card img {
   position: absolute;
-  max-width: 100%;
-  max-height: 100%;
-  width: auto;
-  height: auto;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
   object-fit: cover;
   backface-visibility: hidden;
 }
@@ -50,4 +51,10 @@ body {
 }
 .card.isFlipped:hover {
   transform: rotateY(180deg) scale(1.1);
+}
+.word {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-transform: uppercase;
 }
