--- a/memory-game.css
+++ b/memory-game.css
@@ -3,30 +3,80 @@
   padding: 0;
   box-sizing: border-box;
 }
+html {
+  min-height: 100vh;
+}
 body {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 100vh;
   padding: 25px;
 }
 header {
-  margin-bottom: 50px;
+  width: 100vh;
+  margin-bottom: 20px;
   display: flex;
+  justify-content: space-between;
+  font-size: 1.2rem;
+  font-weight: 600;
+}
+
+.overlay-text {
+  display: none;
+  width: 80vh;
+  height: 60vh;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  flex-direction: column;
+  justify-items: center;
+  align-items: center;
+
+  z-index: 100;
+  /* background-color: rgba(0, 0, 0, 0.4); */
+  padding: 30px;
+  border-radius: 10px;
+  color: white;
+  font-size: 1.5em;
+  text-align: center;
+}
+.overlay-text.visible {
+  display: flex;
+  animation: overlay-grow 500ms forwards;
+}
+#start-game {
+  margin-top: 20px;
+  padding: 5px;
+  font-size: 1.1rem;
+}
+#category {
+  padding: 5px;
+  font-size: 1.1rem;
+}
+@keyframes overlay-grow {
+  from {
+    background-color: rgba(0, 0, 0, 0);
+    font-size: 0;
+  }
+  to {
+    background-color: rgba(240, 166, 223, 0.8);
+    font-size: 2rem;
+  }
 }
 #grid-container {
   display: grid;
-  grid-template-columns: repeat(7, 1fr);
-  grid-template-rows: repeat(2, 1fr);
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(3, 1fr);
   gap: 50px;
 }
 .card-container {
   perspective: 1000px;
 }
 .card {
-  width: 175px;
-  height: 200px;
+  width: 150px;
+  height: 175px;
   position: relative;
   transition: transform 0.5s ease, box-shadow 0.3s ease, border 0.3s ease;
   transform-style: preserve-3d;
