Add matched class to disable matched cards

--- a/memory-game.css
+++ b/memory-game.css
@@ -136,6 +136,9 @@ header {
   width: 100%;
   height: 100%;
 }
+.matched {
+  pointer-events: none;
+}
 @media (max-width: 600px) {
   header {
     width: 100%;
