--- a/memory-game.css
+++ b/memory-game.css
@@ -39,7 +39,7 @@ header {
   padding: 2rem;
   border-radius: 0.5rem;
   color: white;
-  font-size: 1.5em;
+  font-size: 1.2em;
   text-align: center;
 }
 .overlay-text.visible {
@@ -69,9 +69,11 @@ header {
   font-size: 1.1rem;
   border-radius: 0.5rem;
 }
-#feedback {
+#feedback,
+#instructions {
   color: #333;
   font-weight: 500;
+  font-size: 1.5rem;
 }
 @keyframes overlay-grow {
   from {
