--- a/memory-game.css
+++ b/memory-game.css
@@ -12,6 +12,7 @@ body {
   justify-content: center;
   align-items: center;
   padding: 1.5rem;
+  background-color: #f7f7f7;
 }
 header {
   width: 100vh;
@@ -21,12 +22,14 @@ header {
   font-size: 1.2rem;
   font-weight: 600;
 }
-
+h5 {
+  text-transform: uppercase;
+}
 .overlay-text {
   display: none;
   width: 90%;
   max-width: 600px;
-  height: 60vh;
+  height: fit-content;
   position: fixed;
   top: 50%;
   left: 50%;
@@ -35,7 +38,6 @@ header {
   justify-items: center;
   align-items: center;
   z-index: 100;
-  gap: 0.75rem;
   padding: 2rem;
   border-radius: 0.5rem;
   color: white;
@@ -45,6 +47,24 @@ header {
 .overlay-text.visible {
   display: flex;
   animation: overlay-grow 500ms forwards;
+}
+#user-settings {
+  display: flex;
+  flex-direction: column;
+  gap: 0.75rem;
+  width: 100%;
+}
+input[type="radio"] {
+  margin-right: 0.5rem;
+}
+input[type="number"],
+select {
+  width: 50%;
+  padding: 0.75rem;
+  font-size: 1.1rem;
+  border-radius: 0.5rem;
+  border: 1px solid #ccc;
+  margin-top: 0.25rem;
 }
 #start-game,
 #restart-game,
@@ -57,18 +77,14 @@ header {
   border: none;
   border-radius: 0.5rem;
   cursor: pointer;
+  width: 60%;
 }
 #start-game:hover,
 #restart-game:hover,
 #play-again:hover {
   background-color: #ff1493;
 }
-#category,
-#user-timer {
-  padding: 0.5rem;
-  font-size: 1.1rem;
-  border-radius: 0.5rem;
-}
+
 #feedback,
 #instructions {
   color: #333;
