--- a/memory-game.css
+++ b/memory-game.css
@@ -22,8 +22,45 @@ header {
   font-size: 1.2rem;
   font-weight: 600;
 }
-h5 {
+h2 {
   text-transform: uppercase;
+}
+.timer {
+  position: fixed;
+  top: 7%;
+  left: 5%;
+  height: 150px;
+  width: 150px;
+}
+.timer_circle {
+  fill: none;
+  stroke: none;
+}
+.timer_path-elapsed {
+  stroke-width: 7px;
+  stroke: grey;
+}
+.timer_label {
+  position: absolute;
+  width: 150px;
+  height: 150px;
+  top: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 2rem;
+}
+.timer_path-remaining {
+  stroke-width: 7px;
+  stroke-linecap: round;
+  transform: rotate(90deg);
+  transform-origin: center;
+  transition: 1s linear all;
+  stroke: currentColor;
+}
+
+.timer_svg {
+  transform: scaleX(-1);
 }
 .overlay-text {
   display: none;
@@ -44,6 +81,15 @@ h5 {
   font-size: 1.2em;
   text-align: center;
 }
+.timer_path-remaining.green {
+  stroke: rgb(65, 184, 131);
+}
+.timer_path-remaining.orange {
+  stroke: orange;
+}
+.timer_path-remaining.red {
+  stroke: red;
+}
 .overlay-text.visible {
   display: flex;
   animation: overlay-grow 500ms forwards;
@@ -51,8 +97,19 @@ h5 {
 #user-settings {
   display: flex;
   flex-direction: column;
+  align-items: center;
   gap: 0.75rem;
   width: 100%;
+}
+.radio-group {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+.radio-group label {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
 }
 input[type="radio"] {
   margin-right: 0.5rem;
@@ -73,7 +130,7 @@ select {
   padding: 1rem 1.25rem;
   font-size: 1.1rem;
   color: white;
-  background-color: #ff69b4;
+  background-color: #d13e75;
   border: none;
   border-radius: 0.5rem;
   cursor: pointer;
@@ -82,7 +139,7 @@ select {
 #start-game:hover,
 #restart-game:hover,
 #play-again:hover {
-  background-color: #ff1493;
+  background-color: #b53667;
 }
 
 #feedback,
