Add a form for the user to submit a category

--- a/memory-game.css
+++ b/memory-game.css
@@ -122,9 +122,10 @@ input[type="radio"] {
   margin-right: 0.5rem;
 }
 input[type="number"],
+input[type="text"],
 select {
-  width: 50%;
-  padding: 0.75rem;
+  width: 60%;
+  padding: 0.5rem;
   font-size: 1.1rem;
   border-radius: 0.5rem;
   border: 1px solid #ccc;
@@ -174,7 +175,8 @@ select {
 .card-container {
   perspective: 1000px;
 }
-#grid-container.disabled {
+#grid-container.disabled,
+#game-footer.disabled {
   pointer-events: none;
   opacity: 0.5;
 }
@@ -229,6 +231,18 @@ select {
 }
 .matched {
   pointer-events: none;
+}
+
+.btn-submit {
+  color: white;
+  background-color: rgb(4, 99, 4);
+  margin-top: 1rem;
+  padding: 0.5rem 0.5rem;
+  font-size: 1rem;
+  border: none;
+  border-radius: 0.5rem;
+  cursor: pointer;
+  width: 60%;
 }
 @media (min-width: 768px) {
   .timer {
