--- a/memory-game.css
+++ b/memory-game.css
@@ -15,15 +15,23 @@ body {
   background-color: #f7f7f7;
 }
 header {
-  width: 100vh;
   margin-bottom: 1.5rem;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   font-size: 1.2rem;
   font-weight: 600;
 }
+#header-container {
+  width: 100%;
+  max-width: 600px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
 h2 {
   text-transform: uppercase;
 }
@@ -66,14 +74,14 @@ h2 {
 #timer-container,
 #moves-container {
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   width: 100%;
 }
 .overlay-text {
   display: none;
   max-width: 600px;
   width: 90%;
-  max-height: 90vh;
+  max-height: fit-content;
   position: fixed;
   top: 50%;
   left: 50%;
@@ -122,7 +130,6 @@ input[type="radio"] {
   margin-right: 0.5rem;
 }
 input[type="number"],
-input[type="text"],
 select {
   width: 60%;
   padding: 0.5rem;
@@ -175,8 +182,7 @@ select {
 .card-container {
   perspective: 1000px;
 }
-#grid-container.disabled,
-#game-footer.disabled {
+#grid-container.disabled {
   pointer-events: none;
   opacity: 0.5;
 }
@@ -233,18 +239,10 @@ select {
   pointer-events: none;
 }
 
-.btn-submit {
-  color: white;
-  background-color: rgb(4, 99, 4);
-  margin-top: 1rem;
-  padding: 0.5rem 0.5rem;
-  font-size: 1rem;
-  border: none;
-  border-radius: 0.5rem;
-  cursor: pointer;
-  width: 60%;
-}
 @media (min-width: 768px) {
+  header {
+    flex-direction: row;
+  }
   .timer {
     position: fixed;
     top: 7%;
@@ -254,9 +252,6 @@ select {
     position: fixed;
     top: 30%;
     left: 5%;
-  }
-  header {
-    justify-content: space-between;
   }
 }
 @media (max-width: 767px) {
@@ -307,4 +302,37 @@ select {
     width: 100%;
     height: 100%;
   }
+}
+footer {
+  margin-top: 5rem;
+  background-color: #f0f0f0;
+  color: #333;
+  padding: 2rem 0;
+  text-align: center;
+  width: 100%;
+  border-top: 1px solid #ccc;
+}
+footer a {
+  color: #007bff;
+  text-decoration: none;
+}
+footer a:hover {
+  text-decoration: underline;
+}
+
+footer .contributions p {
+  margin-bottom: 1rem;
+}
+
+footer .contributions ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+footer .footer-bottom {
+  margin-top: 2rem;
+}
+.footer-bottom p {
+  font-size: 1rem;
+  color: #666;
 }
