--- a/memory-game.css
+++ b/memory-game.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@400;500;600;700&display=swap");
 * {
   margin: 0;
   padding: 0;
@@ -13,26 +14,27 @@ body {
   align-items: center;
   padding: 1.5rem;
   background-color: #f7f7f7;
+  font-family: "Quicksand", sans-serif;
 }
-header {
-  margin-bottom: 1.5rem;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  font-size: 1.2rem;
-  font-weight: 600;
+header.disabled {
+  pointer-events: none;
+  opacity: 0.5;
 }
 #header-container {
+  margin-bottom: 1.5rem;
   width: 100%;
   max-width: 600px;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
+  padding: 1rem;
+  font-family: "Quicksand", sans-serif;
+  font-size: 1.75rem;
+  font-weight: 600;
 }
 
-h2 {
+h1 {
   text-transform: uppercase;
 }
 .timer {
@@ -71,8 +73,7 @@ h2 {
 .timer_svg {
   transform: scaleX(-1);
 }
-#timer-container,
-#moves-container {
+#timer-container {
   display: flex;
   justify-content: space-between;
   width: 100%;
@@ -150,6 +151,7 @@ select {
   border-radius: 0.5rem;
   cursor: pointer;
   width: 60%;
+  transition: background-color 0.3s ease;
 }
 #start-game:hover,
 #restart-game:hover,
@@ -161,7 +163,7 @@ select {
 #instructions {
   color: #333;
   font-weight: 500;
-  font-size: 1.5rem;
+  font-size: 2rem;
 }
 @keyframes overlay-grow {
   from {
@@ -190,7 +192,7 @@ select {
   width: 150px;
   height: 175px;
   position: relative;
-  transition: transform 0.5s ease, box-shadow 0.3s ease, border 0.3s ease;
+  transition: transform 0.6s ease, box-shadow 0.3s ease, border 0.3s ease;
   transform-style: preserve-3d;
   cursor: pointer;
   border-radius: 10px;
@@ -239,21 +241,6 @@ select {
   pointer-events: none;
 }
 
-@media (min-width: 768px) {
-  header {
-    flex-direction: row;
-  }
-  .timer {
-    position: fixed;
-    top: 7%;
-    left: 5%;
-  }
-  .moves {
-    position: fixed;
-    top: 30%;
-    left: 5%;
-  }
-}
 @media (max-width: 767px) {
   .timer {
     width: 100px;
@@ -263,11 +250,7 @@ select {
   .timer_label {
     font-size: 1.5rem;
   }
-  header {
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-  }
+
   .overlay-text.visible {
     position: absolute;
     padding: 0.5rem;
@@ -293,15 +276,15 @@ select {
     padding: 0.5rem;
   }
   .card {
-    width: 120px;
-    height: 150px;
-    font-size: 0.8rem;
+    width: 100px;
+    height: 120px;
+    font-size: 0.7rem;
   }
-  .card img,
-  .card.word {
-    width: 100%;
-    height: 100%;
-  }
+}
+.card img,
+.card.word {
+  width: 100%;
+  height: 100%;
 }
 footer {
   margin-top: 5rem;
