--- a/memory-game.css
+++ b/memory-game.css
@@ -10,25 +10,26 @@ html {
 body {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
-  padding: 1.5rem;
   background-color: #f7f7f7;
   font-family: "Quicksand", sans-serif;
+}
+main {
+  margin-left: 0.75rem;
 }
 header.disabled {
   pointer-events: none;
   opacity: 0.3;
 }
 #header-container {
-  margin-bottom: 1.5rem;
   width: 100%;
   max-width: 600px;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  padding: 1rem;
+  padding: 0.5rem;
   font-family: "Quicksand", sans-serif;
   font-size: 1.75rem;
   font-weight: 600;
@@ -39,8 +40,9 @@ h1 {
 }
 .timer {
   position: relative;
-  height: 150px;
-  width: 150px;
+  height: 125px;
+  width: 125px;
+  margin-bottom: 0.5rem;
 }
 
 .timer_circle {
@@ -82,7 +84,7 @@ h1 {
   display: none;
   max-width: 600px;
   width: 90%;
-  max-height: fit-content;
+  height: fit-content;
   position: fixed;
   top: 50%;
   left: 50%;
@@ -94,7 +96,7 @@ h1 {
   padding: 1rem;
   border-radius: 0.5rem;
   color: white;
-  font-size: 1em;
+  font-size: 1rem;
   text-align: center;
 }
 .timer_path-remaining.green {
@@ -159,11 +161,15 @@ select {
   background-color: #b53667;
 }
 
-#feedback,
+#feedback {
+  color: #390daf;
+  font-weight: 600;
+  font-size: 1.5rem;
+}
 #instructions {
   color: #333;
   font-weight: 600;
-  font-size: 2.25rem;
+  font-size: 1.5rem;
 }
 @keyframes overlay-grow {
   from {
@@ -180,6 +186,7 @@ select {
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: repeat(3, 1fr);
   gap: 1.25rem;
+  margin-bottom: 4rem;
 }
 .card-container {
   perspective: 1000px;
@@ -253,23 +260,30 @@ select {
 
   .overlay-text.visible {
     position: absolute;
-    padding: 0.5rem;
+    font-size: 0.5rem;
+  }
+  .overlay-text h1 {
+    font-size: 1em;
+  }
+  label {
     font-size: 1rem;
+    font-weight: 600;
   }
-  .overlay-text h2 {
-    font-size: 1.5em;
-  }
+
   #start-game,
   #restart-game,
   #play-again {
-    width: 80%;
+    width: 70%;
     padding: 0.8rem 1rem;
     font-size: 1rem;
   }
   body {
     background-color: #d3d3d3;
-    height: auto;
   }
+  #moves-container {
+    font-size: 1.5rem;
+  }
+
   #grid-container {
     grid-template-columns: repeat(3, 1fr);
     gap: 0.75rem;
@@ -277,8 +291,11 @@ select {
   }
   .card {
     width: 100px;
-    height: 120px;
+    height: 115px;
     font-size: 0.7rem;
+  }
+  footer {
+    margin-top: auto;
   }
 }
 .card img,
@@ -287,7 +304,7 @@ select {
   height: 100%;
 }
 footer {
-  margin-top: 5rem;
+  margin-top: auto;
   background-color: #f0f0f0;
   color: #333;
   padding: 2rem 0;
